--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div class="grid gallery">
-
+        <div class="search">
+            <input id="searchbar" onkeyup="search_images()" type="text" name="search" placeholder="Search">
         </div>
+        <div class="gallery"></div>
         <script src="js/baguetteBox.min.js"></script>
         <script src="js/app.js"></script>
     </body>
